@@ -37,7 +37,7 @@ repositories {
     mavenCentral()
 }
 // This is the current version of HKJ
-val hkjVersion = "0.3.0" 
+val hkjVersion = "0.3.4" 
 
 dependencies {
     // Core library with optics
@@ -52,6 +52,15 @@ java {
         languageVersion.set(JavaLanguageVersion.of(25))
     }
 }
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--enable-preview"))
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
+
 ~~~~
 
 ### Maven Configuration
@@ -59,7 +68,7 @@ java {
 ~~~~ xml
 
 <properties>
-    <hkj.version>0.3.0</hkj.version>
+    <hkj.version>0.3.4</hkj.version>
 </properties>
 
 <dependencies>
@@ -381,7 +390,7 @@ Department updated = Traversals.modify(allStaffStreets, s -> s + " (relocated)",
 List<String> streets = Traversals.getAll(allStaffStreets, dept);
 ~~~~
 
-One composed the traversal replaces what would otherwise be nested loops with manual reconstruction at each level.
+Once composed the traversal replaces what would otherwise be nested loops with manual reconstruction at each level.
 
 ### Filtered Traversals
 
